<resources>
    <string name="app_name">Notizbloq_v2</string>
    <string name="deleteNote">Delete Note</string>
    <string name="deleteAudio">Delete Audio</string>
    <string name="deleteImage">Delete Image</string>
    <string name="title">title</string>
    <string name="text">text</string>
    <string name="save">save</string>
    <string name="write_your_note_here">Write your Note here...</string>
    <string name="new_note_title">New Note Title</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove_photo">Remove Photo</string>
</resources>