<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteViewer">

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/new_note_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_your_note_here"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/linlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTitle" />

    <LinearLayout
        android:id="@+id/linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"
                app:layout_constraintHorizontal_bias="1.0" />

            <Button
                android:id="@+id/btnDeleteImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/remove_photo" />

            <Button
                android:id="@+id/btnAudioRecording"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Start Recording"
                android:textAllCaps="true"
                app:icon="@drawable/ic_audio"
                app:iconPadding="4dp" />

            <Button
                android:id="@+id/btnPlayRecording"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Play"
                app:icon="@android:drawable/ic_media_play"
                app:iconPadding="4dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewPictureThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:paddingLeft="78dp" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="buttonSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="deleteNote"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>